--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "motion": "^12.20.0",
+    "@emailjs/browser": "^4.4.1",
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
+    "motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-type-animation": "^3.2.0"
+    "react-lazyload": "^3.2.1",
+    "react-type-animation": "^3.2.0",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "@react-three/eslint-plugin": "^0.1.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
